# marketplace_rust

./: .gitignore  Cargo.toml  diagrama_de_clases.drawio  lib.rs  readme.md  tarpaulin-report.html
.github/: PULL_REQUEST_TEMPLATE.md
marketplace/: Cargo.toml
marketplace/src/: lib.rs
marketplace/src/coverage/debug/.fingerprint/Inflector-072bd3abf9f68cb1/: lib-inflector
marketplace/src/coverage/debug/.fingerprint/autocfg-142a8f281cc02d4a/: lib-autocfg
marketplace/src/coverage/debug/.fingerprint/base64ct-58ff7453b7c362d0/: lib-base64ct
marketplace/src/coverage/debug/.fingerprint/bitflags-e317be92575ca248/: lib-bitflags
marketplace/src/coverage/debug/.fingerprint/blake2-bb0f7394828f0323/: lib-blake2
marketplace/src/coverage/debug/.fingerprint/bounded-collections-7b646b74a05307b3/: lib-bounded_collections
marketplace/src/coverage/debug/.fingerprint/cc-7d81a560a524cc12/: lib-cc
marketplace/src/coverage/debug/.fingerprint/cfg-if-b17fa7c9669139f9/: lib-cfg_if
marketplace/src/coverage/debug/.fingerprint/curve25519-dalek-fccc86d959c94f59/: lib-curve25519_dalek
marketplace/src/coverage/debug/.fingerprint/darling-88890e68cbad88c7/: lib-darling
marketplace/src/coverage/debug/.fingerprint/derivative-3b0ff9ce5ca604e8/: lib-derivative
marketplace/src/coverage/debug/.fingerprint/derive-syn-parse-c7f309a83ef85c9b/: lib-derive_syn_parse
marketplace/src/coverage/debug/.fingerprint/derive_more-7c5a0d497f64c0b7/: lib-derive_more
marketplace/src/coverage/debug/.fingerprint/derive_more-impl-00c5e4dbde208f19/: lib-derive_more_impl
marketplace/src/coverage/debug/.fingerprint/docify-f23724f9135cbc20/: lib-docify
marketplace/src/coverage/debug/.fingerprint/docify_macros-e6e2742016a043f0/: lib-docify_macros
marketplace/src/coverage/debug/.fingerprint/dyn-clone-e2ad4d207659c956/: lib-dyn_clone
marketplace/src/coverage/debug/.fingerprint/either-e2dcb41893e1e2f6/: lib-either
marketplace/src/coverage/debug/.fingerprint/environmental-acc86b56b4aab9ae/: lib-environmental
marketplace/src/coverage/debug/.fingerprint/fnv-03ff8281c99e5ef3/: lib-fnv
marketplace/src/coverage/debug/.fingerprint/generic-array-5b95f1a409adbe79/: build-script-build-script-build
marketplace/src/coverage/debug/.fingerprint/generic-array-a45ed9dfebc54b97/: lib-generic_array
marketplace/src/coverage/debug/.fingerprint/generic-array-d4022cdc8c8f64b0/: run-build-script-build-script-build
marketplace/src/coverage/debug/.fingerprint/getrandom-22fff064ca7aea46/: lib-getrandom
marketplace/src/coverage/debug/.fingerprint/getrandom_or_panic-03feff7a47b5dde2/: lib-getrandom_or_panic
reportes_view/: Cargo.toml  lib.rs
reportes_view/src/: lib.rs
(+173 files in other folders)
