[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"
authors = ["[your_name] <[your_email]>"]

[dependencies]
ink = { version = "5.1.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }

base64ct = "1.6.0"

[lib]
name = "marketplace"
path = "src/lib.rs"


[features]
default = ["std"]

std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
]

ink-as-dependency = []
