[package]
name = "reportes_view"
version = "0.1.0"
edition = "2021"
authors = ["[your_name] <[your_email]>"]

[dependencies]
ink = { version = "5.1.1", default-features = false }

marketplace = { path = "../marketplace", default-features = false, features = ["ink-as-dependency"] }

scale = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }

[lib]
name = "reportes_view"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
  "ink/std",
  "marketplace/std",
  "scale/std",
  "scale-info/std",
]

ink-as-dependency = []
